tests/sources/invalid/borrow/borrow_alias_escape_errors.fire
// Borrowed projection alias/move escape errors

import @firescript/std.io.println;

class Box {
    string name;
}

void takeOwned(string s) {
    println(s);
}

string badAliasReturn(&Box b) {
    string alias = b.name; // Error: cannot move borrowed projection into owned local  //~ ERROR FS-SEM-0001 @22
    return alias;
}

void badAliasPass(&Box b) {
    takeOwned(b.name); // Error: cannot move borrowed projection into owned parameter  //~ ERROR FS-SEM-0001 @17
}

Box bx = Box("fire");
println(badAliasReturn(bx));
badAliasPass(bx);
